--- a/web/frontend/templates/registration/reset_pass/reset_pass_confirm.html
+++ b/web/frontend/templates/registration/reset_pass/reset_pass_confirm.html
@@ -1,37 +1,62 @@
 {% extends 'base.html' %}
-
+{% load widget_tweaks %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-lg-7">
         <p class="lead">{{ user.first_name }}, please set up a new password: </p>
-        <form method="post" role="form" action="{% url 'reset_pass_done' %}">
+        <form method="post"
+              role="form">
             {% csrf_token %}
             {% for error in form.non_field_errors %}
                 <div class="form-group has-errors text-danger small">
                     {{error}}
                 </div>
             {% endfor %}
-            {% for field in form  %}
-                <div class="form-group has-errors text-danger small">
-                    {{field.errors}}
+            {#----- pass1 input -----#}
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                    </div>
+                    {% if form.is_bound %}
+                        {% if form.password1.errors %}
+                            {% render_field form.password1 class="form-control is-invalid" %}
+                            {% for error in form.password1.errors %}
+                                <div class="invalid-feedback">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            {% render_field form.password1 class="form-control is-valid" %}
+                        {% endif %}
+                    {% else %}
+                        {% render_field form.password1 class="form-control" %}
+                    {% endif %}
                 </div>
-                {% if field.id_for_label == "id_password" %}
-                    <div style="margin-bottom: 25px" class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input id="{{ field.id_for_label }}" type="password" class="form-control" name="{{ field.html_name }}" placeholder="password" required>
+            </div>
+            {#----- pass2 input -----#}
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-key"></i></span>
                     </div>
-                {% elif field.id_for_label == "id_password_repeat" %}
-                     <div style="margin-bottom: 25px" class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input id="{{ field.id_for_label }}" type="password" class="form-control" name="{{ field.html_name }}" placeholder="repeat password" required>
-                    </div>
-                {% endif %}
-            {% endfor %}
-            <div style="margin-top:10px" class="form-group row">
+                    {% if form.is_bound %}
+                        {% if form.password2.errors %}
+                            {% render_field form.password2 class="form-control is-invalid" %}
+                            {% for error in form.password2.errors %}
+                                <div class="invalid-feedback">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            {% render_field form.password2 class="form-control is-valid" %}
+                        {% endif %}
+                    {% else %}
+                        {% render_field form.password2 class="form-control" %}
+                    {% endif %}
+                </div>
+            </div>
+            <div class="form-group row">
                 <!-- Button -->
                 <div class="col-sm-12 controls">
                     <button type="submit" class="btn btn-success">Continue  </button>
